Refractor view models.

--- a/GForum/GForum.Web/Views/Categories/Category.cshtml
+++ b/GForum/GForum.Web/Views/Categories/Category.cshtml
@@ -1,4 +1,4 @@
-﻿@using GForum.Web.Models.Forum
+﻿@using GForum.Web.Models.Categories
 @model CategoryWithPostsViewModel
 @{
     ViewBag.Title = $"{Model.Title} catgeory";
