--- a/GForum/GForum.Web/Views/Posts/Post.cshtml
+++ b/GForum/GForum.Web/Views/Posts/Post.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@using GForum.Web.Models.Forum
+@using GForum.Web.Models.Posts
 @model PostViewModel
 @{
     ViewBag.Title = "Post";
