--- a/GForum/GForum.Web/Views/Posts/Submit.cshtml
+++ b/GForum/GForum.Web/Views/Posts/Submit.cshtml
@@ -1,4 +1,5 @@
-﻿@model GForum.Web.Models.Forum.PostSubmitViewModel
+﻿@using GForum.Web.Models.Posts
+@model PostSubmitViewModel
 @{
     ViewBag.Title = $"Submit";
 }
