--- a/GForum/GForum.Web/Views/Shared/_SubmittedByPartial.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_SubmittedByPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using GForum.Web.Models.Forum
+﻿@using GForum.Web.Models.Shared
 @{ var dynamicModel = new SubmittedByPartialViewModel
     {
         Author = new AuthorViewModel
