--- a/GForum/GForum.Web/Views/Account/Login.cshtml
+++ b/GForum/GForum.Web/Views/Account/Login.cshtml
@@ -9,7 +9,11 @@
         <h4 class="text-muted">Use a local account to log in</h4>
         <hr />
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+            @using (
+                Html.BeginForm("Login", "Account", 
+                new { ReturnUrl = ViewBag.ReturnUrl }, 
+                FormMethod.Post, 
+                new { @class = "form-horizontal" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
