--- a/GForum/GForum.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_LoginPartial.cshtml
@@ -2,29 +2,37 @@
 
 @if (Request.IsAuthenticated)
 {
-    var userEmail = Html.Action("GetEmail", "Account", new { area = "", id = this.User.Identity.GetUserId() }).ToString();
+    var userEmail = Html.Action(
+        "GetEmail",
+        "Account",
+        new { area = "", id = this.User.Identity.GetUserId() }).ToString();
 
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm(
+        "LogOff",
+        "Account",
+        new { area = "" },
+        FormMethod.Post,
+        new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken();
-
         @Html.GravatarImage(userEmail, size: 35, cssClass: "user-navabar-avatar")
-
         <ul class="nav navbar-nav navbar-right">
             <li>
                 @Html.ActionLink(
                     $"Hello {User.Identity.GetUserName()}!",
-                    "Profile", "Users",
-                    new { username = User.Identity.GetUserName() }, null)
+                    "Profile", 
+                    "Users",
+                    new { area = "", username = User.Identity.GetUserName() }, 
+                    null)
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+            <li><a href="javascript:$('#logoutForm').submit()">Log off</a></li>
         </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Register", "Register", "Account", new { area = "" }, new { id = "registerLink" })</li>
+        <li>@Html.ActionLink("Log in", "Login", "Account", new { area = "" }, new { id = "loginLink" })</li>
     </ul>
 }
