--- a/GForum/GForum.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
 }
 
 <div class="row">
-    <div class="col-xs-2 list-group">
+    <div class="col-sm-3 list-group" style="padding-left:15px">
         @Html.ActionLink("Manage categories", "Index", "Categories", null, new { @class = "list-group-item" })
         @Html.ActionLink("Manage posts", "Index", "Posts", null, new { @class = "list-group-item" })
         @Html.ActionLink("Manage users", "Index", "Users", null, new { @class = "list-group-item" })
     </div>
-    <div class="col-xs-10">
+    <div class="col-sm-9">
         @RenderBody()
     </div>
 </div>
