--- a/GForum/GForum.Web/Views/Categories/Category.cshtml
+++ b/GForum/GForum.Web/Views/Categories/Category.cshtml
@@ -4,11 +4,17 @@
     ViewBag.Title = $"{Model.Title} catgeory";
 }
 
-<h2 class="text-center">@Model.Title</h2>
-<hr />
+<h2 class="text-center">Category <strong>@Model.Title</strong></h2>
 
 <div class="row">
-    <div class="col-xs-10">
+    <div class="col-xs-12 text-right margin-bottom">
+        <div class="margin-bottom">
+            <a class="btn btn-primary" href="@Url.Action("Submit", "Posts", new { catgeoryId = Model.Id })">
+                Submit a new post to <strong>@Model.Title</strong>
+            </a>
+        </div>
+    </div>
+    <div class="col-xs-12">
         @foreach (var post in Model.Posts)
         {
             <div class="card">
@@ -23,12 +29,6 @@
                 </div>
             </div>
         }
-    </div>
-    <div class="col-xs-2">
-        @Html.ActionLink("Submit a new post", "Submit", "Posts",
-            new { catgeoryId = Model.Id },
-            new { @class = "btn btn-primary" }
-        )
     </div>
 </div>
 
