Add dialog box for deletion.

--- a/GForum/GForum.Web/Areas/Admin/Views/Categories/Index.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Categories/Index.cshtml
@@ -27,4 +27,5 @@
 @section Scripts {
     @Scripts.Render("~/bundles/gridmvc")
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/Site/Admin/delete-controller.js")
 }
