--- a/GForum/GForum.Web/Areas/Admin/Views/Categories/_DeleteCategoryPartial.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Categories/_DeleteCategoryPartial.cshtml
@@ -4,5 +4,5 @@
 {
     @Html.AntiForgeryToken()
     <input type="hidden" name="id" value="@Model">
-    <button type="submit" title="Delete" class="glyphicon glyphicon-trash"></button>
+    <button type="submit" title="Delete" class="category-delete-btn glyphicon glyphicon-trash"></button>
 }
