--- a/GForum/GForum.Web/Views/Categories/Category.cshtml
+++ b/GForum/GForum.Web/Views/Categories/Category.cshtml
@@ -33,5 +33,5 @@
 </div>
 
 @section Scripts {
-    <script src="~/Scripts/Site/votes-controller.js"></script>
+    @Scripts.Render("~/Scripts/Site/votes-controller.js")
 }
