--- a/GForum/GForum.Web/Views/Shared/_Layout.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootbox")
     @Scripts.Render("~/bundles/toastr")
     @RenderSection("scripts", required: false)
 </body>
