Add posts viewing in administartion.

--- a/GForum/GForum.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -1,2 +1,4 @@
-﻿<h2>Hello <strong>@User.Identity.Name!</strong></h2>
-<h4 class="text-muted">Browse administration sections</h4>
+﻿<div class="card">
+    <h2>Hello <strong>@User.Identity.Name!</strong></h2>
+    <h4 class="text-muted">Browse administration sections</h4>
+</div>
