--- a/GForum/GForum.Web/Areas/Admin/Views/Categories/_AddCategoryPartial.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Categories/_AddCategoryPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using GForum.Web.Areas.Admin.Models
+﻿@using GForum.Web.Areas.Admin.Models.Categories
 @model CategoryAddViewModel
 
 @using (Html.BeginForm("Add", "Categories", FormMethod.Post, new { @class = "form-horizontal panel" }))
@@ -8,7 +8,7 @@
         @Html.EditorFor(m => m.Title,
                 new { htmlAttributes = new { @class = "form-control", placeholder = "New category title" } })
         <div class="input-group-btn">
-            <button type="submit" class="btn btn-primary">Add</button>
+            <button type="submit" class="btn btn-primary">Add new category</button>
         </div>
     </div>
         @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
