--- a/GForum/GForum.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,12 +4,19 @@
 }
 
 <div class="row">
-    <div class="col-sm-2 list-group" style="padding-left:15px">
-        @Html.ActionLink("Manage categories", "Index", "Categories", null, new { @class = "list-group-item" })
-        @Html.ActionLink("Manage posts", "Index", "Posts", null, new { @class = "list-group-item" })
-        @Html.ActionLink("Manage users", "Index", "Users", null, new { @class = "list-group-item" })
+    <div class="col-xs-12">
+        <div class="navbar navbar-default">
+            <div class="navbar-header">
+                @Html.ActionLink("Administration", "Index", "Home", null, new { @class = "navbar-brand" })
+            </div>
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Manage categories", "Index", "Categories")</li>
+                <li>@Html.ActionLink("Manage posts", "Index", "Posts")</li>
+                <li>@Html.ActionLink("Manage users", "Index", "Users")</li>
+            </ul>
+        </div>
     </div>
-    <div class="col-sm-10">
+    <div class="col-xs-12">
         @RenderBody()
     </div>
 </div>
