--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -25,7 +25,7 @@ button.glyphicon {
     background-color: transparent;
     border: none;
     padding: 0;
-    color: #555;
+    color: #666;
 }
 
     button.glyphicon:hover {
@@ -40,6 +40,10 @@ button.glyphicon {
 
 .margin-bottom {
     margin-bottom: 20px;
+}
+
+.grid-mvc {
+    overflow: auto;
 }
 
 /*Forum*/
