--- a/GForum/GForum.Web/Views/Home/Index.cshtml
+++ b/GForum/GForum.Web/Views/Home/Index.cshtml
@@ -4,6 +4,5 @@
 
 <div class="jumbotron">
     <h1>GForum</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead">Welcome to GForum!</p>
 </div>
