Add comments to posts.

--- a/GForum/GForum.Web/Areas/Admin/Views/Posts/Index.cshtml
+++ b/GForum/GForum.Web/Areas/Admin/Views/Posts/Index.cshtml
@@ -21,7 +21,10 @@
             .RenderValueAs(x => x.Content.Truncate(25));
 
         columns.Add(c => c.VoteCount)
-            .Titled("Votes");
+            .Titled("Vote score");
+
+        columns.Add(c => c.CommentCount)
+            .Titled("Comments");
 
         columns.Add(c => c.Author.UserName)
             .Titled("Author");
