--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -71,14 +71,20 @@ button.glyphicon {
 
     .card .content {
         font-size: 1em;
-        border: 1px solid #024;
+        border: 1px solid #aaa;
         border-radius: 5px;
-        padding: 15px;
+        padding: 10px 20px;
     }
 
         .card .content p {
             margin: 5px 0;
         }
+
+.comment.form-control {
+    min-height: 50px;
+    margin-bottom: 10px;
+}
+
 
 /*User profile*/
 .profile-picture {
