--- a/GForum/GForum.Web/Views/Home/About.cshtml
+++ b/GForum/GForum.Web/Views/Home/About.cshtml
@@ -1,7 +1,14 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="card">
+    <h2>@ViewBag.Title</h2>
+
+    <p>
+        <a href="https://telerikacademy.com/" target="_blank">TelerikAcadmey</a>
+        ASP.NET MVC Final Project by
+        <a href="https://github.com/markshark05" target="_blank">markshark05</a>.
+    </p>
+    <p>You can find the source <a href="https://github.com/markshark05/GForum" target="_blank">here</a>.</p>
+</div>
