--- a/GForum/GForum.Web/Views/Posts/Post.cshtml
+++ b/GForum/GForum.Web/Views/Posts/Post.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
 @using GForum.Web.Models.Posts
-@model PostViewModel
+@model PostDetailsViewModel
 @{
     ViewBag.Title = "Post";
 }
