--- a/GForum/GForum.Web/Views/Shared/_VotesPartial.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_VotesPartial.cshtml
@@ -1,9 +1,12 @@
 ﻿@using GForum.Common.Enums
-@using GForum.Web.Models.Posts
-@model PostViewModel
+@model dynamic
 
 <div class="vote-container" data-vote-url="@Url.Action("Vote", "PostsAjax", new { postId = Model.Id })">
-    <div class="vote-btn glyphicon glyphicon-arrow-up @(Model.UserVoteType == VoteType.Upvote ? "active" : "")" data-vote-type="Upvote"></div>
-    <div class="vote-count">@Model.VoteCount.ToMetric()</div>
-    <div class="vote-btn glyphicon glyphicon-arrow-down @(Model.UserVoteType == VoteType.Downvote ? "active" : "")" data-vote-type="Downvote"></div>
+    <div 
+         class="vote-btn glyphicon glyphicon-arrow-up @(Model.UserVoteType == VoteType.Upvote ? "active" : "")" 
+         data-vote-type="Upvote"></div>
+    <div class="vote-count">@(((int)Model.VoteCount).ToMetric())</div>
+    <div 
+         class="vote-btn glyphicon glyphicon-arrow-down @(Model.UserVoteType == VoteType.Downvote ? "active" : "")" 
+         data-vote-type="Downvote"></div>
 </div>
